<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/mapFragment"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="250dp" />

        <include layout="@layout/toolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:background="@drawable/bg_rounded_top"
            android:backgroundTint="@color/purple_500"
            android:focusable="true"
            android:gravity="bottom"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/image_virus"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_baseline_coronavirus_24"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@id/image_virus"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vaksin"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masker"
                        android:textColor="@color/white"
                        android:textSize="12sp" />


                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_rounded_top"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:text="Mau kemana hari ini?"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/teal_200"
                        android:orientation="horizontal">

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/searchLocation"
                            android:layout_gravity="center"
                            android:background="@android:color/transparent"
                            android:drawableStart="@drawable/ic_baseline_trip_origin_24"
                            android:drawablePadding="10dp"
                            android:drawableTint="@android:color/holo_red_light"
                            android:hint="@string/tujuan"
                            android:imeOptions="actionSearch"
                            android:padding="10dp"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black"
                            android:textSize="16sp"/>


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageClear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end|center"
                        android:layout_marginEnd="10dp"
                        android:src="@drawable/ic_baseline_clear_24"
                        android:visibility="gone"
                        app:tint="@android:color/holo_red_light" />


                </FrameLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageLocation"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_baseline_location_on_24"
                        app:tint="@android:color/holo_red_light" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/imageLocation"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvCurrentLocation"
                            android:text="@string/lokasi_anda"
                            android:textColor="@color/black"
                            android:textSize="14sp"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/tvAddress"
                            android:text="@string/alamat"
                            android:textColor="@color/black"
                            android:textSize="12sp"/>

                    </LinearLayout>


                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>